@@ -4,47 +4,19 @@ import javax.servlet.annotation.WebServlet;
 import javax.servlet.http.HttpServlet;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
-
 import java.io.IOException;
-import java.util.Map;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.HashMap;
+import java.util.*;
+import java.sql.SQLException;
+import java.util.stream.Collectors;
 
 import com.xployt.util.RequestProtocol;
 import com.xployt.util.ResponseProtocol;
 import com.xployt.util.DatabaseActionUtils;
 
-// import com.xployt.service.lead.ProjectService;
-
 @WebServlet("/api/lead/project/*")
 public class ProjectConfigServlet extends HttpServlet {
 
-  // private final ProjectService projectService = new ProjectService();
-  // @Override
-  // protected void doGet(HttpServletRequest request, HttpServletResponse
-  // response) {
-  // System.out.println("ProjectConfigServlet doGet method called");
-  // // projectService.getProjectConfigInfo(request, response);
-  // // response.setContentType("application/json");
-  // // response.setCharacterEncoding("UTF-8");
-  // }
-  // @Override
-  // protected void doPost(HttpServletRequest request, HttpServletResponse
-  // response) {
-  // System.out.println("ProjectConfigServlet doPost method called");
-  // // projectService.updateProjectConfigInfo(request, response);
-  // // response.setContentType("application/json");
-  // // response.setCharacterEncoding("UTF-8");
-  // }
-  // }
-
-  private static String[] sqlStatements = {};
-  private static List<Object[]> sqlParams = new ArrayList<>();
-  private static List<Map<String, Object>> results = new ArrayList<>();
-  private static Map<String, Object> requestBody = new HashMap<>();
-  private static ArrayList<String> pathParams = new ArrayList<>();
-  private static Map<String, Object> queryParams = new HashMap<>();
+  private Map<String, Object> requestBody;
 
   @Override
   protected void doGet(HttpServletRequest request, HttpServletResponse response)
@@ -53,138 +25,206 @@ public class ProjectConfigServlet extends HttpServlet {
     System.out.println("\n------------ ProjectConfigServlet | doGet ------------");
 
     try {
-      pathParams = RequestProtocol.parsePathParams(request);
-      System.out.println("Path params: " + pathParams);
+      List<String> pathParams = RequestProtocol.parsePathParams(request);
 
-      if (pathParams.size() > 0) {
-        System.out.println("Path params: " + pathParams.get(0));
+      if (!pathParams.isEmpty()) {
 
         // Combined SQL Statement
         String sqlCombined = "SELECT p.*, u.* FROM Projects p JOIN Users u ON p.clientId = u.userId WHERE p.projectId = ?;";
 
         // Execute Combined Query
-        sqlParams.clear();
+        List<Object[]> sqlParams = new ArrayList<>();
         sqlParams.add(new Object[] { pathParams.get(0) });
-        List<Map<String, Object>> combinedResults = DatabaseActionUtils.executeSQL(new String[] { sqlCombined },
-            sqlParams);
+        List<Map<String, Object>> combinedResults = DatabaseActionUtils.executeSQL(
+            new String[] { sqlCombined }, sqlParams);
 
-        System.out.println("Combined results: " + combinedResults);
-
-        // Check Results
         if (!combinedResults.isEmpty()) {
-          // Map<String, Object> mergedResults = new HashMap<>();
-          // mergedResults.put("project", combinedResults.get(0)); // Project details
-          // mergedResults.put("user", combinedResults.get(0)); // User details (same row
-          // due to JOIN)
-          // System.out.println("Merged results: " + mergedResults);
           ResponseProtocol.sendSuccess(request, response, this, "Project and User found",
-              combinedResults.get(0),
-              HttpServletResponse.SC_OK);
+              combinedResults.get(0), HttpServletResponse.SC_OK);
           return;
         } else {
           ResponseProtocol.sendError(request, response, this, "Project or User not found",
-              "Project or User not found",
-              HttpServletResponse.SC_NOT_FOUND);
+              "Project or User not found", HttpServletResponse.SC_NOT_FOUND);
           return;
         }
-
       }
 
       ResponseProtocol.sendError(request, response, this, "Path params is empty",
-          Map.of("pathParams", new ArrayList<>()),
-          HttpServletResponse.SC_BAD_REQUEST);
+          Map.of("pathParams", new ArrayList<>()), HttpServletResponse.SC_BAD_REQUEST);
 
     } catch (Exception e) {
       System.out.println("Error getting project config info: " + e.getMessage());
-      ResponseProtocol.sendError(request, response, this, "Error getting project config info", e.getMessage(),
-          HttpServletResponse.SC_INTERNAL_SERVER_ERROR);
+      ResponseProtocol.sendError(request, response, this, "Error getting project config info",
+          e.getMessage(), HttpServletResponse.SC_INTERNAL_SERVER_ERROR);
     }
   }
 
   @Override
-
   protected void doPost(HttpServletRequest request, HttpServletResponse response) throws IOException {
-    System.out.println("\n\n------------ ProjectConfigServlet | doPost ------------");
+    System.out.println("\n------------ ProjectConfigServlet | doPost ------------");
 
-    int userId = 0;
     try {
       requestBody = RequestProtocol.parseRequest(request);
       System.out.println("Request body: " + requestBody);
-      // Simulate requestBody
 
-      sqlStatements = new String[] {
-          "INSERT INTO Users (email, passwordHash, name, role, status) VALUES (?, ?, ?, 'Validator', 'inactive')",
-          "UPDATE Users SET role = ? WHERE email = ?",
-          "UPDATE Users SET name = ? WHERE email = ?",
-          "SELECT userId FROM Users WHERE email = ?"
+      String projectId = (String) requestBody.get("projectId");
 
-      };
+      String update = (String) RequestProtocol.parseQueryParams(request).get("update");
 
-      sqlParams.clear();
-
-      sqlParams.add(new Object[] { "Test@test.com",
-          "testPassword",
-          "Test User" });
-
-      sqlParams.add(new Object[] { "Admin", "Test@test.com" });
-
-      sqlParams.add(new Object[] { "Edited Test User", "Test@test.com" });
-
-      sqlParams.add(new Object[] { "Test@test.com" });
-
-      results = DatabaseActionUtils.executeSQL(sqlStatements, sqlParams);
-      if (results.size() > 0) {
-        System.out.println("After rs.next()");
-        userId = (int) results.get(0).get("userId");
-        System.out.println("User ID: " + userId);
+      if (update != null && !update.isEmpty()) {
+        if (update.equals("true")) {
+          cleanupProjectData(Integer.parseInt(projectId));
+        }
       }
 
-      sqlStatements = new String[] {
-          "DELETE FROM Users WHERE userId = ?"
-      };
-      sqlParams = new ArrayList<>();
-      sqlParams.add(new Object[] { userId });
-      DatabaseActionUtils.executeSQL(sqlStatements, sqlParams);
+      // Process testingScope with batch processing
+      String testingScope = (String) requestBody.get("testingScope");
+      if (testingScope != null && !testingScope.isEmpty()) {
+        // Collect unique, trimmed scope items using streams
+        Set<String> trimmedScopeItems = Arrays.stream(testingScope.split(","))
+            .map(String::trim)
+            .filter(s -> !s.isEmpty())
+            .collect(Collectors.toSet());
 
-      System.out.println("Test case done successfully");
+        // Retrieve all scope IDs in one database round trip
+        Map<String, Integer> scopeIdMap = getScopeIds(new ArrayList<>(trimmedScopeItems));
+        List<Object[]> projectScopeBatchParams = new ArrayList<>();
 
-      ResponseProtocol.sendSuccess(request, response, this, "Test case excuted successfully",
-          Map.of("userId", userId),
-          HttpServletResponse.SC_CREATED);
+        for (String scopeItem : trimmedScopeItems) {
+          Integer scopeId = scopeIdMap.get(scopeItem);
+          if (scopeId == null) {
+            ResponseProtocol.sendError(request, response, this, "Scope item not found: " + scopeItem,
+                Map.of("missingScopeItem", scopeItem), HttpServletResponse.SC_BAD_REQUEST);
+            return;
+          }
+          projectScopeBatchParams.add(new Object[] { scopeId, Integer.parseInt(projectId) });
+        }
+        // Batch insert project scopes
+        insertProjectScopesBatch(projectScopeBatchParams);
+      }
+
+      // Process PaymentLevels with batch insertion
+      String[] levels = { "critical", "high", "medium", "low", "informative" };
+      List<Object[]> paymentLevelParams = new ArrayList<>();
+
+      for (String level : levels) {
+        String value = (String) requestBody.get(level);
+        if (value != null && !value.isEmpty()) {
+          for (String item : value.split(",")) {
+            item = item.trim();
+            if (!item.isEmpty()) {
+              paymentLevelParams.add(new Object[] { Integer.parseInt(projectId), level, item });
+            }
+          }
+        }
+      }
+      // Remove duplicates if any and execute batch insert
+      paymentLevelParams = new ArrayList<>(new HashSet<>(paymentLevelParams));
+      insertPaymentLevelsBatch(paymentLevelParams);
+
+      // Process PaymentLevelAmounts with batch insertion
+      String[] fundingFields = { "criticalFunding", "highFunding", "mediumFunding", "lowFunding",
+          "informativeFunding" };
+      List<Object[]> paymentLevelAmountParams = new ArrayList<>();
+
+      for (int i = 0; i < fundingFields.length; i++) {
+        String fundingField = fundingFields[i];
+        if (requestBody.get(fundingField) != null) {
+          Object fundingValueObj = requestBody.get(fundingField);
+          String fundingValue;
+          if (fundingValueObj instanceof Double) {
+            fundingValue = Double.toString((Double) fundingValueObj);
+          } else {
+            fundingValue = (String) fundingValueObj;
+          }
+          if (fundingValue != null && !fundingValue.isEmpty()) {
+            // System.out.println("Funding value: " + fundingValue);
+            paymentLevelAmountParams.add(new Object[] { Integer.parseInt(projectId), levels[i],
+                fundingValue });
+          }
+        }
+      }
+      paymentLevelAmountParams = new ArrayList<>(new HashSet<>(paymentLevelAmountParams));
+      insertPaymentLevelAmountsBatch(paymentLevelAmountParams);
+
+      ResponseProtocol.sendSuccess(request, response, this, "Data inserted successfully",
+          Map.of("projectId", projectId), HttpServletResponse.SC_CREATED);
+
+      String sqlStatement = "UPDATE Projects SET state = 'Configured' WHERE projectId = ?";
+      List<Object[]> sqlParams = new ArrayList<>();
+      sqlParams.add(new Object[] { Integer.parseInt(projectId) });
+      DatabaseActionUtils.executeSQL(new String[] { sqlStatement }, sqlParams);
 
     } catch (Exception e) {
-      System.out.println("Error creating validator: " + e.getMessage());
-
-      ResponseProtocol.sendError(request, response, this, "Error creating validator", e.getMessage(),
-          HttpServletResponse.SC_INTERNAL_SERVER_ERROR);
-
+      System.out.println("Error processing request: " + e.getMessage());
+      // Attempt to rollback any inserted data if projectId is available
+      if (requestBody != null && requestBody.get("projectId") != null) {
+        String projectIdStr = (String) requestBody.get("projectId");
+        cleanupProjectData(Integer.parseInt(projectIdStr));
+      }
+      ResponseProtocol.sendError(request, response, this, "Error processing request",
+          e.getMessage(), HttpServletResponse.SC_INTERNAL_SERVER_ERROR);
     }
   }
 
-  @Override
-  protected void doPut(HttpServletRequest request, HttpServletResponse response)
-      throws IOException {
-    System.out.println("\n------------ ProjectConfigServlet | doPut ------------");
-    queryParams = RequestProtocol.parseQueryParams(request);
-    System.out.println("Query params: " + queryParams);
-
-    if (queryParams.size() > 0) {
-      ResponseProtocol.sendSuccess(request, response, this, "Query params is not empty",
-          Map.of("queryParams", queryParams),
-          HttpServletResponse.SC_OK);
-      return;
+  private Map<String, Integer> getScopeIds(List<String> scopeNames) throws SQLException {
+    if (scopeNames.isEmpty()) {
+      return Collections.emptyMap();
     }
+    // Build placeholders for the IN clause using streams
+    String placeholders = scopeNames.stream()
+        .map(s -> "?")
+        .collect(Collectors.joining(","));
+    String selectSql = "SELECT scopeName, scopeId FROM scopeItems WHERE scopeName IN (" + placeholders + ")";
 
-    ResponseProtocol.sendError(request, response, this, "Query params is empty",
-        Map.of("queryParams", new HashMap<>()),
-        HttpServletResponse.SC_BAD_REQUEST);
+    List<Object[]> selectParams = new ArrayList<>();
+    // Add all scopeNames as the parameters for the query
+    selectParams.add(scopeNames.toArray());
+
+    List<Map<String, Object>> results = DatabaseActionUtils.executeSQL(
+        new String[] { selectSql }, selectParams);
+    Map<String, Integer> scopeIdMap = new HashMap<>();
+    for (Map<String, Object> result : results) {
+      scopeIdMap.put((String) result.get("scopeName"), (Integer) result.get("scopeId"));
+    }
+    return scopeIdMap;
   }
 
-  @Override
-  protected void doDelete(HttpServletRequest request, HttpServletResponse response)
-      throws IOException {
-    System.out.println("\n------------ ProjectConfigServlet | doDelete ------------");
-    pathParams = RequestProtocol.parsePathParams(request);
-    System.out.println("Path params: " + pathParams);
+  private void insertProjectScopesBatch(List<Object[]> batchParams) throws SQLException {
+    String insertSql = "INSERT INTO ProjectScope (scopeId, projectId) VALUES (?, ?)";
+    DatabaseActionUtils.executeBatchSQL(insertSql, batchParams);
+  }
+
+  private void insertPaymentLevelsBatch(List<Object[]> batchParams) throws SQLException {
+    String sql = "INSERT INTO PaymentLevels (projectId, level, item) VALUES (?, ?, ?)";
+    DatabaseActionUtils.executeBatchSQL(sql, batchParams);
+  }
+
+  private void insertPaymentLevelAmountsBatch(List<Object[]> batchParams) throws SQLException {
+    String sql = "INSERT INTO PaymentLevelAmounts (projectId, level, amount) VALUES (?, ?, ?)";
+    DatabaseActionUtils.executeBatchSQL(sql, batchParams);
+  }
+
+  private void cleanupProjectData(int projectId) {
+    try {
+      String deletePaymentLevelAmountsSql = "DELETE FROM PaymentLevelAmounts WHERE projectId = ?";
+      DatabaseActionUtils.executeSQL(
+          new String[] { deletePaymentLevelAmountsSql },
+          Collections.singletonList(new Object[] { projectId }));
+
+      String deletePaymentLevelsSql = "DELETE FROM PaymentLevels WHERE projectId = ?";
+      DatabaseActionUtils.executeSQL(
+          new String[] { deletePaymentLevelsSql },
+          Collections.singletonList(new Object[] { projectId }));
+
+      String[] deleteProjectScopeSql = { "DELETE FROM ProjectScope WHERE projectId = ?",
+          "UPDATE Projects SET state = 'Unconfigured' WHERE projectId = ?" };
+      List<Object[]> sqlParams = new ArrayList<>();
+      sqlParams.add(new Object[] { projectId });
+      sqlParams.add(new Object[] { projectId });
+      DatabaseActionUtils.executeSQL(deleteProjectScopeSql, sqlParams);
+    } catch (SQLException ex) {
+      System.err.println("Cleanup failed for projectId " + projectId + ": " + ex.getMessage());
+    }
   }
 }
